Fixes device listing being covered by title.

--- a/styleguide/styleguide.less
+++ b/styleguide/styleguide.less
@@ -45,7 +45,7 @@ a {
     position: fixed;
     right: 24px;
     top: 0;
-    z-index: 1;
+    z-index: 1001;
 
     a {
         color: white;
